--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@ name: Capital
 favicon: null
 layout_spectrum: 0.15635
 typography_spectrum: 0.84726
+style: the-composer
 title: Capital Formation in the 21st Century
 cta:
   domain: null
